[gd_scene load_steps=8 format=3 uid="uid://bi6bde8mdjeee"]

[ext_resource type="Script" path="res://bird.gd" id="1_n5ngb"]
[ext_resource type="Texture2D" uid="uid://6u7m0q0bsxw" path="res://debug_circle.png" id="1_rt342"]
[ext_resource type="Script" path="res://pipe.gd" id="3_kgtnp"]
[ext_resource type="Texture2D" uid="uid://co5me0f41s647" path="res://icon.svg" id="3_mn8v4"]
[ext_resource type="Script" path="res://HUD.gd" id="5_yewmo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ip1gb"]
size = Vector2(128, 128)

[sub_resource type="CircleShape2D" id="CircleShape2D_o54qn"]
radius = 47.8539

[node name="main" type="Node2D"]

[node name="pipe" type="Node2D" parent="."]
position = Vector2(116, 156)
script = ExtResource("3_kgtnp")
metadata/_edit_group_ = true

[node name="top_pipe" type="Area2D" parent="pipe"]
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="pipe/top_pipe"]
shape = SubResource("RectangleShape2D_ip1gb")

[node name="Sprite2D" type="Sprite2D" parent="pipe/top_pipe"]
texture = ExtResource("3_mn8v4")

[node name="bottom_pipe" type="Area2D" parent="pipe"]
position = Vector2(2.08165e-12, 400)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="pipe/bottom_pipe"]
shape = SubResource("RectangleShape2D_ip1gb")

[node name="Sprite2D" type="Sprite2D" parent="pipe/bottom_pipe"]
texture = ExtResource("3_mn8v4")

[node name="bird" type="CharacterBody2D" parent="."]
position = Vector2(200, 285)
script = ExtResource("1_n5ngb")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="bird"]
shape = SubResource("CircleShape2D_o54qn")

[node name="Sprite2D" type="Sprite2D" parent="bird"]
scale = Vector2(0.100255, 0.100255)
texture = ExtResource("1_rt342")

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource("5_yewmo")

[node name="ScoreLabel" type="Label" parent="HUD"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="HUD"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -43.5
offset_right = 75.0
offset_bottom = 43.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Start"

[connection signal="score_point" from="pipe" to="HUD" method="_on_pipe_score_point"]
[connection signal="pressed" from="HUD/StartButton" to="HUD" method="_on_start_button_pressed"]
